# personal_feed

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  seed.py
achievements/: __init__.py  admin.py  apps.py  models.py  signals.py
achievements/migrations/: 0001_initial.py  0002_initial.py
advertisements/: __init__.py  admin.py  apps.py  models.py  signals.py
advertisements/migrations/: 0001_initial.py
drf_test/: asgi.py  settings.py  urls.py  wsgi.py
feed/: admin.py  models.py  serializers.py  urls.py  views.py
feed/migrations/: 0001_initial.py  0002_initial.py
notes/: __init__.py  admin.py  apps.py  models.py  signals.py
notes/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py
users/migrations/: 0001_initial.py
